--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "butter-toast": "^3.3.5",
     "formik": "^2.1.3",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
