--- a/package.json
+++ b/package.json
@@ -1,56 +1,59 @@
 {
-    "name": "ecommerce_client",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-      "@reach/router": "^1.3.3",
-      "@sweetalert/with-react": "^0.1.1",
-      "@testing-library/jest-dom": "^4.2.4",
-      "@testing-library/react": "^9.3.2",
-      "@testing-library/user-event": "^7.1.2",
-      "axios": "^0.19.2",
-      "butter-toast": "^3.3.5",
-      "formik": "^2.1.3",
-      "jwt-decode": "^2.2.0",
-      "prop-types": "^15.7.2",
-      "react": "^16.12.0",
-      "react-dom": "^16.12.0",
-      "react-redux": "^7.1.3",
-      "react-scripts": "4.0.2",
-      "redux": "^4.0.5",
-      "redux-devtools-extension": "^2.13.8",
-      "redux-thunk": "^2.3.0",
-      "sweetalert": "^2.1.2",
-      "yup": "^0.28.1"
-    },
-    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "prebuild": "yarn build:css",
-      "prestart": "yarn build:css",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject",
-      "build:css": "postcss src/styles/tailwind.css -o src/styles/app.css"
-    },
-    "eslintConfig": {
-      "extends": "react-app"
-    },
-    "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
-    },
-    "devDependencies": {
-      "autoprefixer": "^9.7.4",
-      "postcss-cli": "^7.1.0",
-      "tailwindcss": "^1.2.0"
-    }
+  "name": "ecommerce_client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@reach/router": "^1.3.3",
+    "@sweetalert/with-react": "^0.1.1",
+    "@tailwindcss/forms": "^0.2.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "butter-toast": "^3.3.5",
+    "formik": "^2.1.3",
+    "jwt-decode": "^2.2.0",
+    "node-sass": "^5.0.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2",
+    "yup": "^0.28.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "prebuild": "yarn build:css",
+    "prestart": "yarn build:css",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "build:css": "postcss src/styles/tailwind.css -o src/styles/app.css"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.7.4",
+    "postcss-cli": "^7.1.0",
+    "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0",
+    "tailwindcss": "^1.2.0"
   }
-  
+}
